--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,18 @@
-.DS_Store
-logs
-*.log
+# Node
+node_modules/
 npm-debug.log*
-pids
-*.pid
-*.seed
-lib-cov
-build/Release
-node_modules
-jspm_packages
-.npm
-.node_repl_history
-.results.json
-/.bundle
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/log/*
-!/log/.keep
-/tmp
-    
+yarn-debug.log*
+yarn-error.log*
+
+# macOS
+.DS_Store
+
+# build / coverage
+coverage/
+dist/
+.env
+
+# editor
+.vscode/
+.idea/
+*.sublime-workspace
